# WeatherMCPRadar

./: .editorconfig  .env.example  .gitignore  AGENTS.md  README.md  index.html  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  weather_mcp_20260413_quality.json  weather_mcp_20260413_summary.json  weather_mcp_20260414.html  weather_mcp_20260414_quality.json  weather_mcp_20260415.html  weather_mcp_20260417.html  weather_mcp_20260419.html  weather_mcp_20260420.html  weather_mcp_20260421.html  weather_mcp_20260422.html  weather_mcp_20260422_quality.json  weather_mcp_20260423_quality.json  weather_mcp_20260424.html  weather_mcp_20260424_summary.json  weather_mcp_20260425.html  weather_mcp_20260426.html  weather_mcp_20260427_quality.json  weather_mcp_20260428_summary.json  weather_mcp_20260429_quality.json  weather_mcp_20260430_quality.json  weather_mcp_20260430_summary.json  weather_mcp_20260501_summary.json  weather_mcp_20260503.html  weather_mcp_20260504.html  weather_mcp_20260507.html  weather_mcp_20260508.html  weather_mcp_20260514_quality.json  (+5 more)
.github/workflows/: deploy-pages.yml  health-check.yml  pr-checks.yml  radar-crawler.yml  release.yml
config/: config.yaml  notifications.yaml
config/categories/: weather_mcp.yaml
data/: radar_data.duckdb  search_index.db
data/daily/: 2026-04-14.duckdb  2026-04-15.duckdb  2026-04-16.duckdb
data/raw/2026-04-14/: awesome-mcp-korea Weather.jsonl
data/raw/2026-04-15/: awesome-mcp-korea Weather.jsonl
data/raw/2026-04-16/: awesome-mcp-korea Weather.jsonl
data/raw/2026-04-17/: awesome-mcp-korea Weather.jsonl
data/raw/2026-04-18/: awesome-mcp-korea Weather.jsonl
data/raw/2026-04-19/: awesome-mcp-korea Weather.jsonl
data/raw/2026-04-20/: awesome-mcp-korea Weather.jsonl
data/raw/2026-04-21/: awesome-mcp-korea Weather.jsonl
data/raw/2026-04-22/: awesome-mcp-korea Weather.jsonl
data/raw/2026-04-23/: awesome-mcp-korea Weather.jsonl
data/raw/2026-04-24/: awesome-mcp-korea Weather.jsonl
data/raw/2026-04-25/: awesome-mcp-korea Weather.jsonl
data/raw/2026-04-26/: awesome-mcp-korea Weather.jsonl
data/raw/2026-04-27/: awesome-mcp-korea Weather.jsonl
data/raw/2026-04-28/: awesome-mcp-korea Weather.jsonl
data/raw/2026-04-29/: awesome-mcp-korea Weather.jsonl
data/raw/2026-04-30/: awesome-mcp-korea Weather.jsonl
data/raw/2026-05-01/: awesome-mcp-korea Weather.jsonl
data/raw/2026-05-02/: awesome-mcp-korea Weather.jsonl
data/raw/2026-05-03/: awesome-mcp-korea Weather.jsonl
data/raw/2026-05-14/: awesome-mcp-korea Weather.jsonl
data/raw/2026-05-15/: awesome-mcp-korea Weather.jsonl
data/raw/2026-05-16/: awesome-mcp-korea Weather.jsonl
fixtures/mcp/: fake_kma_weather_mcp.py  fake_korea_weather_mcp.py
mcp_server/: server.py  tools.py
radar/: __init__.py  collector.py  config_loader.py  date_storage.py  exceptions.py  mcp_source.py  models.py  nl_query.py  notifier.py  ontology.py  quality_report.py  raw_logger.py  reporter.py  search_index.py  storage.py
radar/common/: quality_checks.py  validators.py
radar/templates/: index.html  report.html
radar_core/: __init__.py  analyzer.py  collector.py  models.py  storage.py
radar_core/common/: korean_analyzer.py
reports/: index.html  weather_mcp_20260424_quality.json  weather_mcp_20260425_quality.json  weather_mcp_20260428_quality.json  weather_mcp_20260429_summary.json  weather_mcp_20260501_quality.json  weather_mcp_20260507_summary.json  weather_mcp_20260512_quality.json  weather_mcp_20260512_summary.json  weather_mcp_20260513_quality.json  weather_mcp_20260513_summary.json  weather_mcp_20260514_quality.json  weather_mcp_20260514_summary.json  weather_mcp_20260516_summary.json  weather_mcp_quality.json  weather_mcp_report.html
scripts/: check_quality.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_check_quality_script.py  test_collector_parallel.py  test_collector_retry.py  test_date_storage.py  test_github_readme_section_collector.py  test_mcp_category_config.py  test_mcp_server_source_collector.py  test_mcp_tools.py  test_quality_report.py  test_raw_logger.py  test_reporter.py  test_search_index.py  test_validators.py
