[metadata]
name = radar
version = 0.1.0
description = 모든 레이더의 원본 템플릿
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/<username>/Radar-Template
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.11
install_requires =
    requests>=2.31.0
    beautifulsoup4>=4.12.0
    pyyaml>=6.0
    jinja2>=3.1.0
    feedparser>=6.0.0
    python-dateutil>=2.8.0
    pydantic>=2.0.0
    duckdb>=0.9.0

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    mypy>=1.5.0
    black>=23.0.0
    ruff>=0.1.0
    types-PyYAML
    types-requests
    types-python-dateutil

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    venv,
    .venv,
    build,
    dist,
    *.egg-info
